--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -47,9 +47,10 @@ const ogImagePath = `${Astro.url.origin}/og${pagePath}.png`;
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="color-scheme" content="light" />
     <meta name="theme-color" content={colors[color]?.hex} />
-    <link rel="icon" href="/favicon.ico?v3" sizes="32x32" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg?v3" />
-    <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
+    <link rel="icon" href="/favicon/favicon.ico" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon/favicon-16x16.png" />
+    <link rel="apple-touch-icon" href="/favicon/apple-touch-icon.png" />
     <link rel="manifest" href="/manifest.webmanifest" />
     <link rel="canonical" href={canonicalURL} />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -72,7 +73,7 @@ const ogImagePath = `${Astro.url.origin}/og${pagePath}.png`;
     <meta name="twitter:description" content={description} />
     <meta name="twitter:image" content={ogImagePath} />
     <meta name="twitter:image:alt" content={ogAlt} />
-    <link rel="manifest" href="/manifest.json" />
+    
     <link rel="sitemap" href="/sitemap-index.xml" />
     <title>{pageTitle}</title>
     <AstroFont
